QmlCompiler: Add more informative warning for unknown object types

The most common mistakes leading there are missing qualifications in
C++ and missing qt_extract_metatypes in CMake.

Fixes: QTBUG-105254
Change-Id: I285355d0cc5be34d5e018dc6e843e649f60df871
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 87e9ea9efa3baeecea91e32964166fc794ff5161)